[package]
name = "tele_r_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.7", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
# curl = "0.4.42"
serde_json = "1.0.79"
# hyper = "0.14.17"
# reqwest = "0.11.9"
reqwest = { version = "0.11", features = ["json"] }
sysinfo = "0.23"